# ascot

./: .gitignore  Cargo.toml  README.md  deny.toml
.github/workflows/: ci.yml  dependencies.yml  esp.yml  semver-checks.yml
ascot-controller/src/: controller.rs  device.rs  discovery.rs  parameters.rs  policy.rs  request.rs  response.rs
ascot-controller/src/tests/: mod.rs
ascot-library-stack/: Cargo.toml
ascot-library-stack/src/: device.rs  economy.rs  energy.rs  hazards.rs  input.rs  lib.rs  response.rs  route.rs
ascot-library-stack/src/utils/: collections.rs  string.rs
ascot-no-std/: Cargo.toml
ascot-no-std/src/: device.rs  energy.rs  hazards.rs  input.rs  lib.rs  route.rs
ascot-no-std/src/utils/: collections.rs  mod.rs
ascot-stack/src/: device.rs  economy.rs  hazards.rs  parameters.rs  response.rs  route.rs
ascot-stack/src/utils/: map.rs  mod.rs  sets.rs
crates/ascot/: Cargo.toml
crates/ascot-controller/src/: controller.rs  discovery.rs  request.rs
crates/ascot-esp32c3/examples/light/: build.rs
crates/ascot-esp32c3/examples/light-with-state/src/: main.rs
crates/ascot-esp32c3/examples/light/src/: main.rs
crates/ascot-esp32c3/src/: device.rs  lib.rs  mqtt.rs  response.rs  server.rs
crates/ascot-esp32c3/src/devices/: light.rs
crates/ascot-os/: Cargo.toml
crates/ascot-os/src/: device.rs  mac.rs
crates/ascot-os/src/actions/: mod.rs
crates/ascot-stack/src/: route.rs
crates/ascot/src/: device.rs  route.rs
crates/ascot/src/collections/: maps.rs  sets.rs
crates/no-std/: Cargo.toml
crates/no-std/examples/light/: Cargo.toml  build.sh
crates/no-std/examples/light/src/: main.rs
crates/no-std/src/: device.rs  error.rs  lib.rs  mdns.rs  mqtt.rs  net.rs  server.rs  wifi.rs
crates/no-std/src/devices/: light.rs
src/: device.rs  economy.rs  energy.rs  hazards.rs  input.rs  lib.rs  response.rs  route.rs
src/utils/: mod.rs
