[package]
name = "ascot-library"
version = "0.1.0"
authors = ["Michele Valsesia <luni-4@hotmail.it>"]
edition = "2021"
description = "Ascot communication interface for general-purpose devices"
license = "MIT"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indexmap.version = "2.7"
indexmap.default-features = false
indexmap.optional = true

serde.version = "1.0"
serde.default-features = false
serde.features = ["derive"]

serde_json.version = "1"
serde.default-features = false
serde.features = ["alloc"]

[features]
alloc = ["indexmap/serde", "serde_json/preserve_order"]
default = ["alloc"]
