[package]
name = "no-std"
version = "0.1.0"
edition = "2024"

[dependencies]
ascot.version = "0.1.0"
ascot.path = "../ascot"
# ascot.default-features = false

esp-hal = { version = "=1.0.0-rc.0", features = [
  "esp32c3",
  "log-04",
  "unstable",
] }
log = "0.4.27"

embassy-net = { version = "0.7.0", features = [
  "dhcpv4",
  "log",
  "medium-ethernet",
  "tcp",
  "udp",
] }
embedded-io = "0.6.1"
embedded-io-async = "0.6.1"
esp-alloc = "0.8.0"
esp-println = { version = "0.15.0", features = ["esp32c3", "log-04"] }
# for more networking protocol support see https://crates.io/crates/edge-net
critical-section = "1.2.0"
embassy-executor = { version = "0.7.0", features = [
  "log",
  "task-arena-size-20480",
] }
embassy-time = { version = "0.4.0", features = ["log"] }
embassy-sync = "0.7.0"
esp-hal-embassy = { version = "0.9.0", features = ["esp32c3", "log-04"] }
esp-wifi = { version = "0.15.0", features = [
  "builtin-scheduler",
  "esp-alloc",
  "esp32c3",
  "log-04",
  "smoltcp",
  "wifi",
] }
smoltcp = { version = "0.12.0", default-features = false, features = [
  "log",
  "medium-ethernet",
  "multicast",
  "proto-dhcpv4",
  "proto-dns",
  "proto-ipv4",
  "socket-dns",
  "socket-icmp",
  "socket-raw",
  "socket-tcp",
  "socket-udp",
] }
static_cell = "2.1.1"

# My deps
picoserve = { version = "0.16.0", features = ["embassy"] }

edge-nal = "0.5.0"
edge-nal-embassy = "0.6.0"
edge-mdns = "0.6.0"

rust-mqtt = { version = "0.3.0", default-features = false }

# serde_json.version =  "1"
# serde_json.default-features = false
# serde_json.features = ["preserve_order"]
