[package]
name = "no-std"
version = "0.1.0"
edition = "2024"

[dependencies]
ascot.version = "0.1.0"
ascot.path = "../ascot"

# for more networking protocol support see https://crates.io/crates/edge-net
critical-section = "1.2.0"

# mDns dependencies
edge-mdns = "0.6.0"
edge-nal = "0.5.0"
edge-nal-embassy = "0.6.0"

# embassy dependencies
embassy-executor = { version = "0.7.0", features = [
  "log",
  "task-arena-size-65536",
] }
embassy-net = { version = "0.7.0", features = [
  "dhcpv4",
  "log",
  "medium-ethernet",
  "tcp",
  "udp",
] }
embassy-time = { version = "0.5.0", features = ["log"] }
embassy-sync = "0.7.0"

# Esp dependencies
esp-alloc = "0.8.0"
esp-hal = { version = "=1.0.0-rc.0", features = [
  "esp32c3",
  "log-04",
  "unstable",
] }
esp-hal-embassy = { version = "0.9.0", features = ["esp32c3", "log-04"] }
esp-println = { version = "0.15.0", features = ["esp32c3", "log-04"] }
esp-wifi = { version = "0.15.0", features = [
  "builtin-scheduler",
  "esp-alloc",
  "esp32c3",
  "log-04",
  "smoltcp",
  "wifi",
] }

# log dependency
log = "0.4.27"

# mqtt dependency
rust-mqtt = { version = "0.3.0", default-features = false }

# Picoserve dependency
picoserve = { version = "0.16.0", features = ["embassy", "log"] }

# Static cell dependency
static_cell = { version = "2.1.1", features = ["nightly"] }
