[package]
edition      = "2024"
name         = "light"
rust-version = "1.89"
version      = "0.1.0"

[dependencies]
ascot.version = "0.1.0"
ascot.path = "../../../ascot"

no-std.version = "0.1.0"
no-std.path = "../../"

# embassy dependencies
embassy-executor = { version = "0.7.0", features = [
  "log",
  "task-arena-size-65536",
] }
embassy-sync = "0.7.0"
embassy-time = { version = "0.5.0", features = ["log"] }

# Esp dependencies
esp-alloc = "0.8.0"
esp-bootloader-esp-idf = { version = "0.2.0", features = ["esp32c3"] }
esp-hal = { version = "=1.0.0-rc.0", features = [
  "esp32c3",
  "log-04",
  "unstable",
] }
esp-hal-embassy = { version = "0.9.0", features = ["esp32c3", "log-04"] }
esp-println = { version = "0.15.0", features = ["esp32c3", "log-04"] }

# log dependency
log = "0.4.27"

# Toml dependency
toml-cfg.version = "0.2.0"
toml-cfg.default-features = false

[build-dependencies]
toml-cfg.version = "0.2.0"
toml-cfg.default-features = false

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
